--- a/public/index.html
+++ b/public/index.html
@@ -4,13 +4,21 @@
   <meta charset="UTF-8">
   <title>stretch.me</title>
 
-  <link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="css/style.css">
+<script src="libraries/jquery-2.1.3.js"></script>
+<script src='libraries/underscore.js'></script>
+<script src="libraries/backbone.js"></script>
+<script src="libraries/backbone_localstorage.js"></script>
+<script src="libraries/handlebars-v3.0.0.js"></script>
 
 </head>
 <body>
+  <h1>stretch.me</h1>
+
+  <nav></nav>
+  <section id="main-container"></section>
+
+
   
-
-
-
 </body>
 </html>
