--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
   <!-- TEMPLATES -->
   <template id="login-template">
     <h2>Login</h2>
-    <p>Enter your username and password to access your accounts.</p>
+    <p>Enter your username and password to access your account.</p>
     <input type="text" id="login-username" placeholder="Username">
     <input type="password" id="login-password" placeholder="Password">
     <button id="button-login">Log In</button>
@@ -32,8 +32,8 @@
   <template id="signup-template">
     <h2>Register</h2>
     <p>Please fill out your profile information below:</p>
-    <input type="text" id="signup-firstname" placeholder="First Name">
-    <input type="text" id="signup-lastname" placeholder="Last Name">
+    <!-- <input type="text" id="signup-firstname" placeholder="First Name"> -->
+    <!-- <input type="text" id="signup-lastname" placeholder="Last Name"> -->
     <input type="text" id="signup-username" placeholder="Username">
     <input type="password" id="signup-password" placeholder="Password">
     <button id="button-signup">Create Profile</button>
