--- a/public/index.html
+++ b/public/index.html
@@ -4,13 +4,26 @@
   <meta charset="UTF-8">
   <title>stretch.me</title>
 
-<link rel="stylesheet" href="css/style.css">
-<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-<script src='http://underscorejs.org/underscore-min.js'></script>
-<script src="http://backbonejs.org/backbone-min.js"></script>
-<script src="http://cdnjs.cloudflare.com/ajax/libs/backbone-localstorage.js/1.1.16/backbone.localStorage-min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/3.0.0/handlebars.min.js"></script>
+  <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <script src='http://underscorejs.org/underscore-min.js'></script>
+  <script src="http://backbonejs.org/backbone-min.js"></script>
+  <script src="http://cdnjs.cloudflare.com/ajax/libs/backbone-localstorage.js/1.1.16/backbone.localStorage-min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/3.0.0/handlebars.min.js"></script>
 
+  <script src="js/app.js"></script>
+  <script src="js/models/user.js"></script>
+  <script src="js/models/routine.js"></script>
+  <script src="js/models/stretch.js"></script>
+  <script src="js/collections/routine_coll.js"></script>
+  <script src="js/collections/stretch_coll.js"></script>
+  
+  <script src="js/views/user_view.js"></script>
+  <script src="js/views/routine_view.js"></script>
+  <script src="js/views/stretch_view.js"></script>
+  <script src="js/views/routine_coll_view.js"></script>
+  <script src="js/views/stretch_coll_view.js"></script>
+
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <h1>stretch.me</h1>
