--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,7 @@
   <h1>stretch.me</h1>
 
   <nav id="navigation"></nav>
+  <section id="session"></section>
   <section id="main">
     <!-- <div id="left-container"></div>
     <div id="right-container"></div> -->
@@ -69,7 +70,7 @@
 
   <!-- Routines -->
 
-  <template id="routine-template">
+  <template id="routine-list-template">
     {{#each routine}}
       <p class="routine-name">{{ name }}</p>
       <p class="routine-description">{{ description }}</p>
