session routes done

--- a/public/index.html
+++ b/public/index.html
@@ -10,31 +10,31 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/3.0.0/handlebars.min.js"></script>
 
   <script src="js/app.js"></script>
-
   <script src="js/models/user.js"></script>
   <script src="js/models/routine.js"></script>
   <script src="js/models/stretch.js"></script>
-
   <script src="js/collections/routine_coll.js"></script>
   <script src="js/collections/stretch_coll.js"></script>
-  
   <script src="js/views/user.js"></script>
   <script src="js/views/routine.js"></script>
   <script src="js/views/stretch_preview.js"></script>
   <script src="js/views/stretch_full.js"></script>
-  <script src="js/views/routine_coll.js"></script>
-  <script src="js/views/stretch_coll.js"></script>
+  <script src="js/views/routine_list.js"></script>
+  <script src="js/views/stretch_list.js"></script>
 
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <h1>stretch.me</h1>
   <hr>
+
   <nav id="navigation"></nav>
+
   <section id="session"></section>
+  
   <section id="main">
-    <!-- <div id="left-container"></div>
-    <div id="right-container"></div> -->
+    <div id="left-container"></div>
+    <div id="right-container"></div>
   </section>
 
   <!-- TEMPLATES -->
@@ -64,9 +64,9 @@
   </template>
 
   <template id="user-template">
+    <button id="button-logout">Logout</button>
     <p>Hello, {{ username }}. Please select a routine:</p>
     <!-- <button id="button-edit">Edit Account</button> -->
-    <button id="button-logout">Logout</button>
     <hr>
   </template>
 
@@ -81,7 +81,7 @@
 
   <!-- Stretches -->
 
-  <template id="stretch-list-template">
+  <template id="stretch-preview-template">
     <!-- {{#each stretches}} -->
       <p class="stretch-name">{{ name }}</p>
       <!-- insert check box / radio button -->
