--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
   <nav id="navigation"></nav>
 
   <section id="session"></section>
-  
+
   <section id="main">
     <div id="left-container"></div>
     <div id="right-container"></div>
@@ -65,8 +65,9 @@
 
   <template id="user-template">
     <button id="button-logout">Logout</button>
-    <p>Hello, {{ username }}. Please select a routine:</p>
     <!-- <button id="button-edit">Edit Account</button> -->
+    <p>Hello, {{ username }}. Please select a routine:</p>
+    <button id="button-new-routine">New Routine</button>
     <hr>
   </template>
 
@@ -77,16 +78,16 @@
       <p class="routine-name">{{ name }}</p>
       <p class="routine-description">{{ description }}</p>
     </div>
+    <button class="button-edit-routine">Edit</button>
   </template> 
 
   <!-- Stretches -->
 
   <template id="stretch-preview-template">
-    <!-- {{#each stretches}} -->
+    <div class="stretch">
       <p class="stretch-name">{{ name }}</p>
-      <!-- insert check box / radio button -->
-    <!-- {{/each}} -->
-      <button id="button-remove"></button>
+    </div>
+      <button id="button-remove">x</button>
   </template>  
 
   <template id="stretch-all-template">
