--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,8 @@
   <script src="js/views/routine_list.js"></script>
   <script src="js/views/stretch_list.js"></script>
 
+  <script src="tts.js"></script>
+
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -29,7 +31,6 @@
   <hr>
 
   <nav id="navigation"></nav>
-
   <section id="session"></section>
 
   <section id="main">
