fooking front end

--- a/public/index.html
+++ b/public/index.html
@@ -112,8 +112,8 @@
   <template id="stretch-full-template">
     <div>
       <div class="close-link">x</div>
-      <p class="name">{{ name }}</p>
-      <div class="equipment">
+      <p class="stretch-name">{{ name }}</p>
+      <div class="stretch-equipment">
         {{#if band}}
           <p>Requires a strap.</p>
         {{/if}}
