heading down the right path for once

--- a/public/index.html
+++ b/public/index.html
@@ -22,8 +22,6 @@
   <script src="js/views/routine_list.js"></script>
   <script src="js/views/stretch_list.js"></script>
 
-  <script src="tts.js"></script>
-
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -49,7 +47,7 @@
     <p>Enter your username and password to access your routines.</p>
     <input type="text" id="login-username" placeholder="Username">
     <input type="password" id="login-password" placeholder="Password">
-    <button id="button-login">Log In</button>
+    <button id="login">Log In</button>
     <p>New user? Register for a new account <a href="#" id="signup-link">here</a>.</p>
     <hr>
   </template>
@@ -61,22 +59,23 @@
     <!-- <input type="text" id="signup-lastname" placeholder="Last Name"> -->
     <input type="text" id="signup-username" placeholder="Username">
     <input type="password" id="signup-password" placeholder="Password">
-    <button id="button-signup">Create Profile</button>
+    <button id="signup">Create Profile</button>
     <p>Already have an account? Login <a href="#" id="login-link">here</a>.</p>
     <hr>
   </template>
 
   <template id="user-template">
     <!-- <button id="button-edit">Edit Account</button> -->
+    <button id="logout">Logout</button>
+    <button id="new-routine">New Routine</button>
     <p>Hello, {{ username }}. Please select a routine:</p>
-    <button id="button-logout">Logout</button>
     <hr>
   </template>
 
   <!-- Routines -->
     
 
-  <template id="routine-list-template">
+  <template id="routine-template">
     <div class="routine">
         <div class="routine-info" data-id="{{id}}">
         <p class="routine-name">{{ name }}</p>
