--- a/public/index.html
+++ b/public/index.html
@@ -3,22 +3,29 @@
 <head>
   <meta charset="UTF-8">
   <title>stretch.me</title>
+<!--   
   <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script src='http://underscorejs.org/underscore-min.js'></script>
   <script src="http://backbonejs.org/backbone-min.js"></script>
   <script src="http://cdnjs.cloudflare.com/ajax/libs/backbone-localstorage.js/1.1.16/backbone.localStorage-min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/3.0.0/handlebars.min.js"></script>
+ -->
+  <script src="libraries/jquery-2.1.3.js"></script>
+  <script src='libraries/underscore.js'></script>
+  <script src="libraries/backbone.js"></script>
+  <script src="libraries/backbone_localstorage.js"></script>
+  <script src="libraries/handlebars-v3.0.0.js"></script>
 
   <script src="js/app.js"></script>
-  <script src="js/models/user.js"></script>
+  <script src="js/models/session.js"></script>
   <script src="js/models/routine.js"></script>
   <script src="js/models/stretch.js"></script>
   <script src="js/collections/routine_coll.js"></script>
   <script src="js/collections/stretch_coll.js"></script>
-  <script src="js/views/user.js"></script>
+  <script src="js/views/session.js"></script>
   <script src="js/views/routine.js"></script>
   <script src="js/views/stretch_preview.js"></script>
-  <script src="js/views/stretch_full.js"></script>
+  <script src="js/views/stretch_modal.js"></script>
   <script src="js/views/routine_list.js"></script>
   <script src="js/views/stretch_list.js"></script>
 
@@ -36,6 +43,7 @@
   <div id="left-container"></div>
   <div id="right-container"></div>
 
+  <section id="play-routine"></section>
   <section id="stretch-modal"></section>
 
   <!-- TEMPLATES -->
@@ -73,16 +81,18 @@
   </template>
 
   <!-- Routines -->
-    
 
   <template id="routine-template">
     <div class="routine">
-        <div class="routine-info" data-id="{{id}}">
+      <div class="routine-info" data-id="{{id}}">
         <p class="routine-name">{{ name }}</p>
         <p class="routine-description">{{ description }}</p>
       </div>
-      <button class="button-edit-routine">Edit Info</button>
-      <button class="button-add-stretches">Add Streches</button>
+      <div class="routine-nav">
+        <button class="edit-routine">Edit</button>
+        <button class="play-routine">Play</button>
+        
+      </div>
     </div>
   </template> 
 
@@ -98,7 +108,7 @@
     <div class="stretch" data-id="{{id}}">
       <p class="stretch-name">{{ name }}</p>
     </div>
-      <button id="button-remove">x</button>
+      <!-- <button id="button-remove">x</button> -->
   </template>  
 
   <template id="stretch-all-template">
@@ -127,7 +137,9 @@
       {{/if}}
       <p>Seconds per Rep: {{rep_time}}</p>
       <p class="stretch-directions">{{ instruction }}</p>
-      <div class="video"></div>
+      <div class="video">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/hfvd04VyXbs" frameborder="0" allowfullscreen></iframe>
+      </div>
     </div>
   </template>
 
