--- a/public/index.html
+++ b/public/index.html
@@ -76,6 +76,7 @@
     <!-- <button id="button-edit">Edit Account</button> -->
     <button id="logout">Logout</button>
     <button id="new-routine">New Routine</button>
+    <button id="show-all-routines">Show All Routines</button>
     <p>Hello, {{ username }}. Please select a routine:</p>
     <hr>
   </template>
