ready to start playback

--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,7 @@
   <script src="js/views/stretch_modal.js"></script>
   <script src="js/views/routine_list.js"></script>
   <script src="js/views/stretch_list.js"></script>
+  <script src="js/views/play_routine.js"></script>
 
   <link rel="stylesheet" href="css/style.css">
 </head>
