stretch countdown working

--- a/public/index.html
+++ b/public/index.html
@@ -40,11 +40,10 @@
   <nav id="navigation"></nav>
   <section id="session"></section>
 
-  <div id="main"></div>
   <div id="left-container"></div>
   <div id="right-container"></div>
 
-  <section id="play-routine"></section>
+  <section id="playback"></section>
   <section id="stretch-modal"></section>
 
   <!-- TEMPLATES -->
@@ -145,6 +144,6 @@
     </div>
   </template>
 
-  
+  <script src="js/bundle.js"></script>
 </body>
 </html>
