--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,7 @@
   <script src="js/views/session.js"></script>
   <script src="js/views/routine.js"></script>
   <script src="js/views/stretch_preview.js"></script>
+  <script src="js/views/stretch_to_add.js"></script>
   <script src="js/views/stretch_modal.js"></script>
   <script src="js/views/routine_list.js"></script>
   <script src="js/views/stretch_list.js"></script>
@@ -79,10 +80,12 @@
   <template id="user-template">
     <!-- <button id="button-edit">Edit Account</button> -->
     <p>Hello, {{ username }}. Please select a routine:</p>
-    <button id="new-routine">New Routine</button>
-    <button id="show-all-routines">Show All Routines</button>
-    <button id="show-all-stretches">Show All Stretches</button>
-    <button id="logout">Logout</button>
+    <div id="user-nav">
+      <button id="new-routine">New Routine</button>
+      <button id="show-all-routines">Show All Routines</button>
+      <button id="show-all-stretches">Show All Stretches</button>
+      <button id="logout">Logout</button>
+    </div>
     <hr>
   </template>
 
@@ -95,7 +98,7 @@
         <p class="routine-description">{{ description }}</p>
       </div>
       <div class="routine-nav">
-        <button class="edit-routine">Edit</button>
+        <!-- <button class="edit-routine">Edit</button> -->
         <button class="play-routine">Play</button>
         
       </div>
@@ -111,8 +114,18 @@
   <!-- Stretches -->
 
   <template id="stretch-preview-template">
-    <div class="stretch">
-      
+    <div class="stretch-preview">
+      <div class="stretch-info" data-id="{{id}}">
+        <p class="stretch-name">{{ name }}</p>
+      </div>
+       <div class="stretch-nav">
+        <button class="remove-stretch">Remove</button>
+      </div>
+    </div>
+  </template>  
+
+  <template id="stretch-to-add-template">
+    <div class="stretch-to-add">
       <div class="stretch-info" data-id="{{id}}">
         <p class="stretch-name">{{ name }}</p>
       </div>
@@ -121,14 +134,6 @@
       </div>
     </div>
   </template>  
-
-  <template id="stretch-all-template">
-    {{#each stretches}}
-      <p class="stretch-name">{{ name }}</p>
-      <!-- insert check box / radio button -->
-    {{/each}}
-    <button id="button-add"></button>
-  </template>
 
   <template id="stretch-modal-template">
     <div>
