added create routine function

--- a/public/index.html
+++ b/public/index.html
@@ -108,7 +108,7 @@
   <template id="routine-new-template">
     <input type="text" id="routine-name" placeholder="Name your routine">
     <input type="text" id="routine-description" placeholder="Enter a description (optional)">
-    <button id="button-create-routine">Create</button>
+    <button id="create-routine">Create</button>
   </template>
 
   <!-- Stretches -->
